--- a/.github/workflows/csv2txt.yml
+++ b/.github/workflows/csv2txt.yml
@@ -1,54 +1,51 @@
-name: CSV to TXT Conversion
+name: Convert Data
 
-# 自动触发 + 手动触发
 on:
   push:
     paths:
-      - 'data/result.csv'
-  workflow_dispatch:
+      - 'data/result.csv'  # 只有result.csv变更时触发
+  workflow_dispatch:       # 保留手动触发功能
 
 jobs:
   convert:
     runs-on: ubuntu-latest
-
+    
     steps:
-      # 1️⃣ Checkout 仓库，保证 push 权限
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          persist-credentials: true
-
-      # 2️⃣ 设置 Python
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.x"
-
-      # 3️⃣ 列出 data 文件夹，便于调试
-      - name: List data folder
-        run: ls -l data/
-
-      # 4️⃣ CSV → TXT 转换
-      - name: Convert CSV to TXT
-        run: python3 scripts/csv2txt.py
-
-      # 5️⃣ 提交并 push TXT 文件，避免 exit 128
-      - name: Commit and push TXT
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          git add data/result.txt
-          git commit -m "Auto convert CSV to TXT" --allow-empty || echo "No changes to commit"
-
-          # 拉取最新远程，解决 fast-forward 问题
-          git fetch origin main
-          git reset --soft origin/main
-
-          git push origin main
-
-      # 6️⃣ 输出 Git 状态，方便调试
-      - name: Show git status
-        run: |
-          git status
-          git log -3 --oneline
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0     # 获取完整提交历史，用于检测文件变更
+        
+    - name: Detect file changes
+      id: changes
+      uses: tj-actions/changed-files@v42
+      with:
+        files: |
+          data/result.csv
+        
+    - name: Set up Python
+      if: steps.changes.outputs.any_changed == 'true' || github.event_name == 'workflow_dispatch'
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+        
+    - name: Install dependencies
+      if: steps.changes.outputs.any_changed == 'true' || github.event_name == 'workflow_dispatch'
+      run: |
+        python -m pip install --upgrade pip
+        pip install pandas
+        
+    - name: Run conversion script
+      if: steps.changes.outputs.any_changed == 'true' || github.event_name == 'workflow_dispatch'
+      run: |
+        cd scripts
+        python csv2txt.py
+        
+    - name: Commit changes
+      if: steps.changes.outputs.any_changed == 'true' || github.event_name == 'workflow_dispatch'
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        git add data/result.txt
+        git diff-index --quiet HEAD || git commit -m "Auto-update converted data [skip ci]"
+        git push
